# test_tengine_lite

./: CMakeLists.txt
tengine-lite-1.5/: libtengine-lite.dylib
ultralytics:yolov3/: ultralytics_yolov3.cpp
